# typst-syntax-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
python/typst_syntax/: __init__.py  _typst_syntax.pyi
python/typst_syntax/ast/: __init__.py
python/typst_syntax/lib_typst_syntax.dylib.dSYM/Contents/: Info.plist
python/typst_syntax/lib_typst_syntax.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_typst_syntax.dylib.yml
src/: error.rs  highlight.rs  lib.rs  linked_node.rs  source.rs  span.rs  syntax_kind.rs  syntax_node.rs  utils.rs
src/ast/: code.rs  markup.rs  math.rs  mod.rs
tests/: test_ast.py  test_highlight.py  test_parsing.py  test_traversal.py
